# AICompany

./: .env.example  .gitignore  Dockerfile.sandbox  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/app/: serve.py  studio.html  webapp.py
examples/calculator/: index.html
src/orchestration/: __init__.py  agents.py  config.py  contracts.py  graph.py  main.py  routing.py  sandbox.py
tests/: test_grade.py  test_routing.py
